# GAN-SAGAN

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: gan_128.yaml  gan_256.yaml  gan_512.yaml  sagan_128.yaml  sagan_256.yaml  sagan_512.yaml
scripts/: eval_compare.sh  prepare_celebahq.py  train_gan_256.sh  train_sagan_256.sh
src/datasets/: celebahq.py
src/models/: attention.py  blocks.py  discriminator.py  gan.py  generator.py
src/training/: __main__.py  checkpoint.py  compare.py  evaluate.py  logger.py  losses.py  train.py
src/utils/: config.py  image.py  metrics.py  seed.py
tests/: test_attention.py  test_models.py
